Updated project files

--- a/templates/payment_instructions.html
+++ b/templates/payment_instructions.html
@@ -178,7 +178,7 @@
         }
         
         .payment-hidden {
-            display: none;
+            display: none !important;
         }
 
         .approval-status {
