Updated project files

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -65,7 +65,7 @@
             </button>
             
             <div class="text-center">
-                <a href="#" class="text-muted text-decoration-none small">Forgot your password?</a>
+                <a href="{{ url_for('forgot_password') }}" class="text-muted text-decoration-none small">Forgot your password?</a>
             </div>
         </form>
         
